# telescope-app

./: .gitignore  Cargo.toml  Cross.toml  README.md  rust-toolchain
.github/workflows/: rust.yml
telescope_app/: Cargo.toml  README.md  index.html  rust-toolchain
telescope_app/assets/: LICENSE.md  sw.js
telescope_app/src/: app.rs  config.rs  lib.rs  main.rs  oobe.rs  settings.rs  states.rs  utils.rs
telescope_core/: Cargo.toml  README.md
telescope_core/src/: certs.rs  config.rs  lib.rs  proxy.rs  resource.rs
