[package]
name = "telescope_core"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.83"
hudsucker = "0.23.0"
log = "0.4.22"
nanoid = "0.4.0"
rcgen = { version = "0.13.2", features = ["pem", "crypto"] }
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
toml = "0.8.19"
