[package]
name = "telescope_core"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.83"
http-body-util = "0.1.2"
hudsucker = "0.23.0"
hyper = { version = "1.5.2", features = ["http1", "http2", "client" ] }
log = "0.4.22"
nanoid = "0.4.0"
rcgen = { version = "0.13.2", features = ["pem", "crypto"] }
reqwest = "0.12.12"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
toml = "0.8.19"

[features]
strict = []
